--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,16 @@
-h1 {
-  color: #655;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
+#canvas {
+  float: left; 
+  width:50%;
+  height:32rem;
+}
+#text {
+  float: right; 
+  width:50%;
+  height:32rem;
+}
+#text textarea{
+	height:22rem;
+}
+.can{
+	width:90%;
 }
