--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,3 +14,16 @@
 .can{
 	width:90%;
 }
+.can .select{
+  margin: 0 40px 0 20px;
+}
+.can .run{
+  margin-bottom: 0;
+}
+.cropArea {
+  background: #E4E4E4;
+  min-height: 230px;
+  height: auto;
+  margin: 15px;
+  margin-right: 0;
+}
