--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,70 +2,111 @@
 <!-- <div style="text-align:center">
     <h1>Welcome to GetTextFromPhoto !</h1>
 </div> -->
-<div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas>
-    <div class="grid-y grid-padding-x" style="height: 100%;">
-        <br>
-        <div class="cell shrink">
-            <img class="thumbnail" src="https://placehold.it/550x350">
-        </div>
-        <div class="cell auto">
-            <h5>Select language</h5>
-            <p>English</p>
+<div>
+    <div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas>
+        <div class="grid-y grid-padding-x" style="height: 100%;">
+            <br>
+            <!-- <div class="cell shrink">
+                <img class="thumbnail" src="https://placehold.it/550x350">
+            </div> -->
+            <div class="cell auto">
+                <h5>操作指南</h5>
+                <p>1.按“选择图片”按钮，选择一张本地图片。</p>
+                <p>2.您需要选择您的文字是处于自然场景中还是打印字体，您的选择将直接影响算法效果。若其中一个算法效果不好，可以换另一个试试。</p>
+                <p>3.按“开始运行”按钮，开始运行算法，并弹出等待浮层。</p>
+                <p>4.算法运行过程中，您可以随时取消，停止算法。</p>
+                <p>5.按“获取结果”按钮，退出等待浮层并显示结果。</p>
+                <p>6.若有任何问题，您可以通过网页下方的联系方式向我留言。</p>
+            </div>
         </div>
     </div>
-</div>
-<div class="off-canvas-content" data-off-canvas-content>
-    <div class="title-bar hide-for-large">
-        <div class="title-bar-left">
-            <button class="menu-icon" type="button" data-toggle="my-info"></button>
-            <span class="title-bar-title">Mike Mikerson</span>
+    <div class="off-canvas-content" data-off-canvas-content>
+        <div class="title-bar hide-for-large">
+            <div class="title-bar-left">
+                <button class="menu-icon" type="button" data-toggle="my-info"></button>
+                <span class="title-bar-title">Mike Mikerson</span>
+            </div>
         </div>
-    </div>
-    <div class="callout primary">
+        <div class="callout primary">
+            <article class="grid-container">
+                <div>
+                    <h1>Hello! Welcome to GetTextFromPhoto !</h1>
+                    <p class="lead">欢迎使用本产品----获取图片文字！</p>
+                </div>
+            </article>
+        </div>
         <article class="grid-container">
-            <div>
-                <h1>Hello! Welcome to GetTextFromPhoto !</h1>
-                <p class="lead">1.Click the canvas to add an img which includes text.</p>
-                <p class="lead">2.Click the button "START!" to run the algorithm.</p>
-                <p class="lead">3.You can copy the text to your own clipboard.</p>
+            <div class="grid-x grid-margin-x small-up-2 medium-up-3 large-up-4" id="canvas">
+                <div class="can"> 
+                    <img id="target_img" class="thumbnail" [src]="getURL()">
+                    <input type="file" accept="image/*" id="invisiable" style="display: none"  (change)="onChange($event)"/>
+                </div>
+            </div>
+            <div id="text">
+                <button type="button" class="button alert select" (click)="onSelect()">选择图片</button>
+                <button type="button" class="button warning run" (click)="onStart()">开始运行！</button>
+                <div class="switch">
+                    <input id="mySwitch1" type="radio" checked name="myGroup">
+                    <label for="mySwitch1">自然场景的文字识别</label>
+                </div> 
+                <div class="switch">
+                    <input id="mySwitch2" type="radio" name="myGroup">
+                    <label for="mySwitch2">打印字体的文字识别</label>
+                </div>
+                <textarea placeholder="The text in your imagine will be shown in this area!">{{Text}}</textarea>
+            </div>
+            <hr>
+            <div class="grid-x grid-margin-x">
+                <div class="medium-6 cell">
+                    <h3>Contact Me</h3>
+                    <p>If you have any question or suggestion to this website,please come to contact me in the fllowing ways.You can also leave message to me by filling in the form on the right.</p>
+                    <ul class="menu">
+                        <li><a href="mailto:282106931@qq.com">Email</a></li>
+                        <li><a href="tel:13621833156">Phone</a></li>
+                    </ul>
+                </div>
+                <div class="medium-6 cell">
+                    <label>Name
+                        <input type="text" placeholder="Name">
+                    </label>
+                    <label>Email
+                        <input type="text" placeholder="Email">
+                    </label>
+                    <label>Message
+                        <textarea placeholder="holla at a designer"></textarea>
+                    </label>
+                    <input type="submit" class="button expanded" value="Submit">
+                </div>
             </div>
         </article>
     </div>
-    <article class="grid-container">
-        <div class="grid-x grid-margin-x small-up-2 medium-up-3 large-up-4" id="canvas">
-            <div class="can"> 
-                <img id="target_img" class="thumbnail" [src]="img_url">
-                <button type="button" class="button alert select" (click)="onSelect()">SELECT</button>
-                <button type="button" class="button warning run" (click)="onStart()">START!</button>
-                <button type="button" class="button warning run" (click)="onReady()">READY!</button>
-                <input type="file" accept="image/*" id="invisiable" style="display: none"  (change)="onChange($event)"/>
-            </div>
+</div>
+<div id="floating_layer">
+    <div id="background"></div>
+    <div id="content">
+        <div style="margin-left:25%;">
+            <circle-progress
+                [renderOnClick]="false"
+                [percent]="circle_progress_percent"
+                [maxPercent]="100"
+                [radius]="120"
+                [outerStrokeWidth]="20"
+                [innerStrokeWidth]="10"
+                [outerStrokeColor]="'#78C000'"
+                [innerStrokeColor]="'#C7E596'"
+                [showSubtitle]="false"
+                [animation]="true"
+                [animationDuration]="40000"
+            ></circle-progress>
         </div>
-        <div id="text">
-            <textarea placeholder="The text in your imagine will be shown in this area!"></textarea>
+        <div>
+            <button type="button" class="button warning" (click)="onCancel()" style="margin-left:45%;">取消运行</button>
         </div>
-        <hr>
-        <div class="grid-x grid-margin-x">
-            <div class="medium-6 cell">
-                <h3>Contact Me</h3>
-                <p>If you have any question or suggestion to this website,please come to contact me in the fllowing ways.You can also leave message to me by filling in the form on the right.</p>
-                <ul class="menu">
-                    <li><a href="mailto:282106931@qq.com">Email</a></li>
-                    <li><a href="tel:13621833156">Phone</a></li>
-                </ul>
-            </div>
-            <div class="medium-6 cell">
-                <label>Name
-                    <input type="text" placeholder="Name">
-                </label>
-                <label>Email
-                    <input type="text" placeholder="Email">
-                </label>
-                <label>Message
-                    <textarea placeholder="holla at a designer"></textarea>
-                </label>
-                <input type="submit" class="button expanded" value="Submit">
-            </div>
+        <div>
+            <button type="button" class="button alert" (click)="onReady()" style="margin-left:45%;" id="ready">获取结果</button>
         </div>
-    </article>
+        <button type="button" class="button" (click)="onRead()" style="display:none;" id="read"></button>
+    </div>
+    
+    
 </div>
